# proofline

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  NEXT_STEPS.md  README.md  SECURITY.md  SUPPORT.md  design-qa.md  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: api-ci.yml  release.yml  secret-scan.yml
apps/api/proofline/: __init__.py  api.py  backup.py  cli.py  config.py  database.py  decision_health.py  embeddings.py  evaluation.py  evidence_packages.py  extraction.py  folder_scanning.py  folder_watching.py  git_ingestion.py  grounding.py  ingestion.py  integrity.py  learning.py  main.py  migrations.py  model_gateway.py  models.py  notes.py  pilot_simulation.py  portability.py  portable_import.py  (+12 more)
apps/desktop/: README.md  package.json  sidecar_entry.py
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: index.html  package.json  playwright.config.ts  vite.config.ts
deploy/: .env.example  docker-compose.yml
deploy/docker/: api.Dockerfile
docs/: README.md  agent-spec.md  alpha-support-boundary.md  architecture.md  backup-recovery.md  benchmarks.md  contributing.md  embedded-lifecycle.md  evidence-packages.md  index.html  phase-closeout-2026-07.md  pilot-protocol.md  product-brief.md  production-readiness.md  proofline-page.css  proofline-page.js  provenance-model.md  provider-configuration.md  roadmap-90-days.md  roadmap-evidence-2026-07-13.md  security-threat-model.md  stale-decision-demo.md  visual-language.md  windows-release.md
docs/adr/: 0001-scope-and-stack.md  0002-git-source-identity-and-provenance.md  0003-defer-tauri-packaging.md  0004-evidence-first-brain-expansion.md
docs/releases/: v0.1.0-alpha.1.md  v0.1.0-alpha.2.md  v0.1.0-alpha.3.md  v0.1.0-alpha.4.md  v0.1.0-alpha.5.md  v0.10.0.md  v0.11.0.md  v0.12.0.md  v0.13.0.md  v0.14.0.md  v0.14.1.md  v0.14.10.md  v0.14.11.md  v0.14.12.md  v0.14.13.md  v0.14.14.md  v0.14.15.md  v0.14.16.md  v0.14.17.md  v0.14.2.md  v0.14.3.md  v0.14.4.md  v0.14.5.md  v0.14.6.md  v0.14.7.md  v0.14.8.md  v0.14.9.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md  v0.9.1.md  v1.0.0.md  v1.1.0.md
docs/reports/: real-model-comparison-preflight.md  roadmap-evidence-quality-v0.10.0.artifact.json  roadmap-evidence-quality-v0.10.0.html
evals/: README.md
evals/benchmarks/: decision-evidence-package-v1.json  folder-watcher-1000-v1.json  lexical-2026-07-12.json  provenance-scale-v1.json  reranker-token-overlap-v1.json  vector-index-1000-v1.json
evals/extraction/: seed-v1.json
evals/grounded-qa/: seed-v1.json
evals/pilot/: README.md  attempts.v1.template.csv  citations.v1.template.csv  commercial-signals.v1.template.csv  gate-review.v1.template.json  manifest.v1.template.json  questions.v1.template.jsonl  security-platform.v1.template.csv  weekly-usage.v1.template.csv
evals/pilot-simulation/: README.md  engineering-context-v1.json
evals/platform/: github-actions-0dde53f.json
evals/provenance/: conformance-v1.json
evals/real-model/: comparison-mock-v1.json  comparison-v1.example.json  mock-extraction-v1.json  mock-grounded-v1.json
evals/reranking/: seed-v1.json
evals/retrieval/: seed-v1.json  seed-v2.json
examples/: architecture-decision.md
scripts/: analyze_pilot.py  benchmark_evidence_package.py  benchmark_folder_watcher.py  benchmark_provenance.py  benchmark_reranker.py  benchmark_vector_index.py  build_desktop_sidecar.py  check_ci_skip.py  desktop_release_receipt.py  installed_server_smoke.py  platform_release_receipt.py  platform_smoke.py  provenance_conformance.py  release_check.py  release_local.sh  release_windows.ps1  render_readme_demo_gif.py  simulate_pilot.py  sync_web_bundle.py  windows_desktop_receipt.py
spec/decision-evidence-package/: README.md  VERSIONING.md
(+94 files in other folders)
