[project]
name = "proofline"
version = "0.9.1"
description = "Evidence-first engineering decision memory"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Thang Luu"}]
keywords = ["engineering", "knowledge", "provenance", "retrieval", "local-first"]
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.9,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.32,<1",
]

[project.urls]
Homepage = "https://github.com/thangldw/proofline"
Repository = "https://github.com/thangldw/proofline.git"
Issues = "https://github.com/thangldw/proofline/issues"
Changelog = "https://github.com/thangldw/proofline/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "pytest>=8,<9",
  "ruff>=0.8,<1",
]

[project.scripts]
proofline = "proofline.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/api/proofline"]

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
