[project]
name = "proofline"
version = "1.1.0"
description = "Evidence-first engineering decision memory"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Thang Luu"}]
keywords = ["engineering", "knowledge", "provenance", "retrieval", "local-first"]
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "keyring>=25,<26",
  "pillow>=12,<13",
  "pydantic>=2.9,<3",
  "python-pptx>=1.0,<2",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.32,<1",
]

[project.urls]
Homepage = "https://github.com/thangldw/proofline"
Repository = "https://github.com/thangldw/proofline.git"
Issues = "https://github.com/thangldw/proofline/issues"
Changelog = "https://github.com/thangldw/proofline/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "hypothesis>=6,<7",
  "jsonschema>=4.23,<5",
  "pyinstaller>=6.21,<7",
  "pytest>=8,<9",
  "ruff>=0.8,<1",
]

[project.scripts]
proofline = "proofline.runtime:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/api/proofline"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/apps/desktop/src-tauri/binaries",
  "/apps/desktop/src-tauri/gen",
  "/apps/desktop/src-tauri/target",
  "/build",
  "/node_modules",
]

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
