[package]
name = "proofline-desktop"
version = "0.14.16"
description = "Experimental native shell for Proofline"
authors = ["Thang Luu"]
edition = "2021"

[lib]
name = "proofline_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
